<resources>
    <string name="app_name">Proyecto_IMBU</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Principal</string>
    <string name="menu_rest">Restaurantes</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_gallery">Galería</string>
    <string name="menu_chat">Chatea</string>

    <string name="home_second">Home Second</string>
    <string name="first_christmas">First Christmas</string>
</resources>
