<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="acatictla.alan.proyecto_imbu.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_main">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="acatictla.alan.proyecto_imbu.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="acatictla.alan.proyecto_imbu.ui.ui.galeriafragment2.GaleriaFragment2Fragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/activity_galeria" />

    <fragment
        android:id="@+id/nav_rest"
        android:name="acatictla.alan.proyecto_imbu.ui.restaurante.RestauranteFragment"
        android:label="@string/menu_rest"
        tools:layout="@layout/activity_restaurantes" />

    <fragment
        android:id="@+id/nav_eventos"
        android:name="acatictla.alan.proyecto_imbu.ui.restaurantes2.Restaurantes2Fragment"
        android:label="@string/menu_eventos"
        tools:layout="@layout/activity_eventos"/>
    <activity
        android:id="@+id/nav_galeria"
        android:name="acatictla.alan.proyecto_imbu.ui.gallery.FirstChristmas"
        android:label="activity_first_christmas"
        tools:layout="@layout/activity_first_christmas" />

</navigation>